# nola

./: .coqdeps.d  .gitignore  LICENSE  Makefile  README.md  _CoqProject  _opam  coq-noix.opam  coq-nola.opam
nola/: core.v  ctx.v  deriv.v  hgt.v  judg.v  prelude.v  sintp.v  syntax.v
nola/bi/: deriv.v  gen_upd.v  gmap.v  internal.v  judg.v  later.v  list.v  mod.v  modw.v  ofe.v  order.v  paradox.v  plist.v  upd.v  updw.v  util.v  wp.v  wpw.v
nola/examples/: basic.v  borrow.v  con.v  deriv.v  ilist.v  later.v  lock.v  logic.v  minilogic.v  mutex.v  nsynty.v  xty.v
nola/examples/heap_lang/: adequacy.v  class_instances.v  definitions.v  derived_laws.v  lang.v  metatheory.v  notation.v  pretty.v  primitive_laws.v  proofmode.v  proph_erasure.v  tactics.v  total_adequacy.v
nola/examples/logic/: adequacy.v  borrow.v  ctx.v  deriv.v  eval.v  facts.v  intp.v  inv.v  iris.v  na_inv.v  prop.v  proph_ag.v  sintp.v  sinv.v  subst.v  synty.v
nola/examples/logic/verify/: borrow.v  ilist.v  ilist_base.v  na_ilist.v  na_strm.v  strm.v  strm_base.v  vlist.v
nola/examples/rust/: ty.v
nola/examples/rust_halt/: adequacy.v  anydep.v  base.v  box.v  core.v  mod.v  mutref.v  num.v  prod.v  prod_more.v  ptr.v  ptrs_more.v  rec.v  shrref.v  sum.v  sum_more.v  type.v  uninit.v
nola/examples/type/: adequacy.v  deriv.v  facts.v  intp.v  iris.v  sintp.v  subeqv.v  subst.v  type.v
nola/heap_lang/: adequacy.v  class_instances.v  definitions.v  derived_laws.v  lang.v  locations.v  metatheory.v  notation.v  pretty.v  primitive_laws.v  proofmode.v  proph_erasure.v  tactics.v  total_adequacy.v
nola/heap_lang/lib/: lock.v  mutex.v
nola/iris/: agree.v  borrow.v  borrow_deriv.v  cif.v  ciprop.v  csum.v  deriv.v  dfrac.v  dinv.v  dinv_deriv.v  discrete_fun.v  fbor.v  fborrow.v  fupd.v  gmap.v  inv.v  inv_deriv.v  iprop.v  later.v  lft.v  list.v  na_inv.v  na_inv_deriv.v  ofe.v  option.v  order.v  own.v  paradox.v  pborrow.v  pborrow_deriv.v  plist.v  proph.v  proph_ag.v  prophecy.v  sintp.v  sinv.v  sinv_deriv.v  store.v  store_deriv.v  upd.v  (+2 more)
nola/logic/: conv.v  ctx.v  notate.v  prop.v  sx.v
nola/lrust/: adequacy.v  cfml.v  heap.v  lang.v  lifting.v  notation.v  proofmode.v  races.v  tactics.v
nola/rust_lang/: adequacy.v  cfml.v  heap.v  lang.v  lifting.v  notation.v  proofmode.v  races.v  tactics.v
nola/util/: bin.v  cit.v  ctx.v  eq.v  fn.v  func.v  funext.v  gmap.v  gmultiset.v  hgt.v  intp.v  list.v  nary.v  nat.v  order.v  plist.v  pred.v  prod.v  productive.v  proph.v  psg.v  rel.v  schoice.v  sem.v  set.v  tagged.v  tlist.v  uip.v  wf.v  wfo.v  wft.v
(+11 files in other folders)
