opam-version: "2.0"
synopsis: "Propositional sharing without step-indexing"
maintainer: "Yusuke Matsushita <ysk.m24t@gmail.com>"
authors: ["Yusuke Matsushita <ysk.m24t@gmail.com>"]
homepage: "https://github.com/hopv/noix"
bug-reports: "https://github.com/hopv/noix/issues"

depends: [
  "coq-iris" { (= "dev.2023-03-19.1.e1aa9b82") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
remove: [make "uninstall"]
