opam-version: "2.0"
synopsis: "Parameterizing Higher-Order Ghost State to Clear the Later Modality"
maintainer: "Yusuke Matsushita <ysk.m24t@gmail.com>"
authors: ["Yusuke Matsushita <ysk.m24t@gmail.com>"]
license: "MIT"
homepage: "https://github.com/hopv/nola"
bug-reports: "https://github.com/hopv/nola/issues"
dev-repo: "git+https://github.com/hopv/nola.git"
version: "dev"

depends: [
  "coq-iris" { (= "dev.2024-08-17.0.8a98d00a") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
remove: [make "uninstall"]
