opam-version: "2.0"
synopsis: "Modular Liveness Verification by Later-Free Ghost State"
maintainer: "Yusuke Matsushita <ysk.m24t@gmail.com>"
authors: ["Yusuke Matsushita <ysk.m24t@gmail.com>"]
license: "MIT"
homepage: "https://github.com/hopv/nola"
bug-reports: "https://github.com/hopv/nola/issues"
dev-repo: "git+https://github.com/hopv/nola.git"
version: "dev"

depends: [
  "coq-iris" { (= "dev.2024-09-11.3.0203d5ca") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
remove: [make "uninstall"]
