opam-version: "2.0"
synopsis: "Later-free ghost state for verifying termination in Iris"
maintainer: "Yusuke Matsushita <ysk.m24t@gmail.com>"
authors: ["Yusuke Matsushita <ysk.m24t@gmail.com>"]
license: "MIT"
homepage: "https://github.com/hopv/nola"
bug-reports: "https://github.com/hopv/nola/issues"
dev-repo: "git+https://github.com/hopv/nola.git"
version: "dev"

depends: [
  "coq-iris" { (= "dev.2025-03-12.0.3da27a78") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
remove: [make "uninstall"]
